<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_learn_today"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_hello"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/image_dev"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_development"
        app:layout_constraintEnd_toStartOf="@id/image_design"
        app:layout_constraintBottom_toTopOf="@id/image_ai"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <ImageView
        android:id="@+id/image_design"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/image_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_dev"
        app:layout_constraintTop_toTopOf="@id/image_dev"/>

    <ImageView
        android:id="@+id/image_ai"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_ai"
        app:layout_constraintEnd_toStartOf="@id/image_explore"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_dev" />

    <ImageView
        android:id="@+id/image_explore"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/image_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_ai"
        app:layout_constraintTop_toTopOf="@id/image_ai" />

    <TextView
        android:id="@+id/text_what_learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_courses"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/image_ai"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/text_what_learn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        android:src="@drawable/image_background"
        app:layout_constraintTop_toBottomOf="@id/text_what_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/background"/>

    <TextView
        android:id="@+id/text_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_dev"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cone_curso"/>

</androidx.constraintlayout.widget.ConstraintLayout>